# anl2025

./: .envrc  .pre-commit-config.yaml  404.html  HISTORY.md  index.html  multideal.md  objects.inv  pyproject.toml  restore_git_repos.bat  restore_git_repos.sh  sitemap.xml  tmp.md  to-uninstall.txt
.github/workflows/: doc.yml  pypi.yml  test.yml  test_jupyter_notebooks.yml
docs/: makedocs.sh  mkdocs.yml
docs/docs/: index.md  install.md  reference.md
docs/site/: 404.html  index.html  objects.inv  sitemap.xml
faq/: index.html
install/: index.html
notebooks/: 01.develop_an_agent.ipynb
notebooks/tutorials/: Tutorial_run_a_negotiation.ipynb  tutorial_develop.ipynb  tutorial_scenarios.ipynb
official_test_scenarios/TargetQuantity_example/: center.csv
official_test_scenarios/dinners/: center.yml
reference/: index.html
scenarios/SSdinners/: center.yml
scenarios/TargetQuantity/: center.csv  center.py  center.yml
scenarios/TargetQuantitySaved/: center.yml
scenarios/TargetQuantity_example/: center.yml
scenarios/dinners/: center.py  center.yml
scenarios/dinners2/: center.yml
scenarios/dinners_saved/: center.yml
scenarios/job_hunt/: center.yml
scenarios/job_hunt_saved/: center.yml
scenarios/job_hunt_target/: center.yml
scenarios/target_quantity/: center.py  center.yml
scenarios_genius/s125008x5jzAn120250627H115005573995nFlRHFYyParty/: center.yml
scenarios_genius/s12500HxBBa8W220250627H115001878571ePVbdQAYParty/: center.yml
scenarios_genius/s12500PRWIt9JY20250627H1150163786907vtedvPQParty/: center.yml
scenarios_genius/s12500aHnqiqjP20250627H115012977003OT6pu4HjParty/: center.yml
scenarios_genius/s12500guqKFfBI20250627H115009592193aKwYiOeCParty/: center.yml
scenarios_genius/s259200bLbvuGGaSupermarket20250628H172256205718DtPzsInr/: center.yml
scenarios_genius/s375dIjELzwhOutfit20250628H172306791766z5RDCx7N/: center.yml
scenarios_genius/s4200fWptMy8CBarbecue20250628H172303422841NGMLDtbL/: center.yml
scenarios_genius/s4500Sz64iXB9Grocery20250628H17230039332680AxBVZa/: center.yml
scenarios_genius/s604800ks7tLOQxTravel20250628H172309364975iNFyRqZe/: center.yml
scripts/: makegraphs.py
scripts/Code_for_tutorials2025/: Tutorial_develop_a_new_negotiator_main.py  Tutorial_running_a_negotiation.py
search/: search_index.json
src/anl2025/: __init__.py  anl2025.py  cli.py  common.py  inout.py  negotiator.py  runner.py  scenario.py  tournament.py  ufun.py
tests/: test_jupyter.py  test_scenarios.py
tmp_notebooks/: 01.develop_an_agent.ipynb  Untitled.ipynb
tmp_notebooks/tutorials/: Tutorial_run_a_negotiation.ipynb  tutorial_develop.ipynb  (+1 more)
(+138 files in other folders)
