[project]
name = "anl2025"
version = "0.1.0"
description = "Temporary development of anl2025"
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
    "negmas>=0.10.23",
    "typer>=0.12.5",
    "anl>=0.1.10",
    "anl-agents>=0.1.0",
		"tensorflow>=2.18.0",
]

[tool.uv.sources]
negmas = { path = "../negmas" , editable = true }
anl = { path = "../anl" , editable = true }
anl-agents = { path = "../anl-agents" , editable = true }

[project.scripts]
anl2025 = "anl2025.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
